fix: center prx_fit when overflowing container

--- a/parallax.css
+++ b/parallax.css
@@ -61,15 +61,16 @@ body,
 body .prx_fit,
 .prx_container_y .prx_fit {
     height: calc(var(--p-size, unset) * 1vh);
-    margin-left: auto;
-    margin-right: auto;
-    min-width: calc(100% / var(--p-scale-to-fit, 1));
+    /* center even if oversized (not using translate) */
+    --p-center-shift: calc((1% - 1% / var(--p-scale-to-fit)) * var(--p-align));
+    left: var(--p-center-margin);           /*make sure it is relative*/
+    width: calc(100% / var(--p-scale-to-fit, 1));
 }
 .prx_container_x .prx_fit {
     width: calc(var(--p-size, unset) * 1vw);
-    margin-top: auto;
-    margin-bottom: auto;
-    min-height: calc(100% / var(--p-scale-to-fit, 1));
+    --p-center-shift: calc((1% - 1% / var(--p-scale-to-fit)) * var(--p-align));
+    left: var(--p-center-margin);
+    height: calc(100% / var(--p-scale-to-fit, 1));
 }
 body [prx],
 .prx_container_y [prx] {
